--- a/TallerClasificacion(bueno).ipynb
+++ b/TallerClasificacion(bueno).ipynb
@@ -1,16 +1,28 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# DESARROLLO TALLER 2\n",
+        " Profundización Automatización y Control.\n",
+        "Desarrollado por:\n",
+        "* Jhonathan\n",
+        "* Juan José Torres Quiñonez. 220160099.\n",
+        "* Jason"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Uso de datos identificados:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        },
-        "id": "6n6TFaDvohMD",
-        "outputId": "8bb08061-69ec-4ef2-b7d5-f81a902acc7e"
-      },
+      "execution_count": 7,
+      "metadata": {},
       "outputs": [
         {
           "data": {
@@ -113,7 +125,7 @@
               "4          -74.93                  0  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -157,8 +169,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Uso de datos no identificados:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
