--- a/TallerClasificacion(bueno).ipynb
+++ b/TallerClasificacion(bueno).ipynb
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -282,6 +282,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>id</th>\n",
               "      <th>tamaño</th>\n",
               "      <th>categoria</th>\n",
               "      <th>sensor_orion</th>\n",
@@ -294,6 +295,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>300001</td>\n",
               "      <td>0.10</td>\n",
               "      <td>2</td>\n",
               "      <td>-91.99</td>\n",
@@ -304,6 +306,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
+              "      <td>300002</td>\n",
               "      <td>0.93</td>\n",
               "      <td>2</td>\n",
               "      <td>2.98</td>\n",
@@ -314,6 +317,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
+              "      <td>300003</td>\n",
               "      <td>0.86</td>\n",
               "      <td>3</td>\n",
               "      <td>-22.53</td>\n",
@@ -324,6 +328,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
+              "      <td>300004</td>\n",
               "      <td>0.86</td>\n",
               "      <td>1</td>\n",
               "      <td>24.14</td>\n",
@@ -334,6 +339,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
+              "      <td>300005</td>\n",
               "      <td>0.92</td>\n",
               "      <td>3</td>\n",
               "      <td>16.14</td>\n",
@@ -351,9 +357,11 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>95</th>\n",
+              "      <td>300096</td>\n",
               "      <td>0.61</td>\n",
               "      <td>3</td>\n",
               "      <td>75.72</td>\n",
@@ -364,6 +372,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>96</th>\n",
+              "      <td>300097</td>\n",
               "      <td>0.08</td>\n",
               "      <td>1</td>\n",
               "      <td>-3.33</td>\n",
@@ -374,6 +383,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>97</th>\n",
+              "      <td>300098</td>\n",
               "      <td>0.41</td>\n",
               "      <td>3</td>\n",
               "      <td>-48.04</td>\n",
@@ -384,6 +394,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
+              "      <td>300099</td>\n",
               "      <td>0.71</td>\n",
               "      <td>1</td>\n",
               "      <td>15.46</td>\n",
@@ -394,6 +405,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>99</th>\n",
+              "      <td>300100</td>\n",
               "      <td>0.40</td>\n",
               "      <td>2</td>\n",
               "      <td>36.78</td>\n",
@@ -404,22 +416,22 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>100 rows × 7 columns</p>\n",
+              "<p>100 rows × 8 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "    tamaño  categoria  sensor_orion  sensor_vega  sensor_polaris  \\\n",
-              "0     0.10          2        -91.99        90.35           12.85   \n",
-              "1     0.93          2          2.98        14.86          -22.14   \n",
-              "2     0.86          3        -22.53        10.25           74.24   \n",
-              "3     0.86          1         24.14       -31.35          -67.50   \n",
-              "4     0.92          3         16.14        98.17          -14.76   \n",
-              "..     ...        ...           ...          ...             ...   \n",
-              "95    0.61          3         75.72       -65.18           75.00   \n",
-              "96    0.08          1         -3.33       -28.75          -97.28   \n",
-              "97    0.41          3        -48.04       -23.84           32.14   \n",
-              "98    0.71          1         15.46       -39.97           45.71   \n",
-              "99    0.40          2         36.78       -59.10          -65.14   \n",
+              "        id  tamaño  categoria  sensor_orion  sensor_vega  sensor_polaris  \\\n",
+              "0   300001    0.10          2        -91.99        90.35           12.85   \n",
+              "1   300002    0.93          2          2.98        14.86          -22.14   \n",
+              "2   300003    0.86          3        -22.53        10.25           74.24   \n",
+              "3   300004    0.86          1         24.14       -31.35          -67.50   \n",
+              "4   300005    0.92          3         16.14        98.17          -14.76   \n",
+              "..     ...     ...        ...           ...          ...             ...   \n",
+              "95  300096    0.61          3         75.72       -65.18           75.00   \n",
+              "96  300097    0.08          1         -3.33       -28.75          -97.28   \n",
+              "97  300098    0.41          3        -48.04       -23.84           32.14   \n",
+              "98  300099    0.71          1         15.46       -39.97           45.71   \n",
+              "99  300100    0.40          2         36.78       -59.10          -65.14   \n",
               "\n",
               "    sensor_antares etiqueta_numerica  \n",
               "0            45.19              None  \n",
@@ -434,10 +446,10 @@
               "98           64.84              None  \n",
               "99            5.63              None  \n",
               "\n",
-              "[100 rows x 7 columns]"
+              "[100 rows x 8 columns]"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -447,6 +459,7 @@
         "\n",
         "query2 = \"\"\"\n",
         "SELECT\n",
+        "datos_basicos.id,\n",
         "datos_basicos.tamaño,\n",
         "datos_basicos.categoria,\n",
         "orion.sensor_orion,\n",
@@ -519,6 +532,69 @@
         "\n",
         "predicciones_rf2\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Conversión de números a palabras:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array(['Negativo', 'Negativo', 'Positivo', 'Positivo', 'Positivo',\n",
+              "       'Positivo', 'Negativo', 'Negativo', 'Positivo', 'Positivo',\n",
+              "       'Positivo', 'Negativo', 'Positivo', 'Positivo', 'Positivo',\n",
+              "       'Positivo', 'Positivo', 'Negativo', 'Negativo', 'Negativo',\n",
+              "       'Negativo', 'Positivo', 'Positivo', 'Negativo', 'Negativo',\n",
+              "       'Positivo', 'Negativo', 'Positivo', 'Positivo', 'Negativo',\n",
+              "       'Negativo', 'Positivo', 'Negativo', 'Negativo', 'Positivo',\n",
+              "       'Positivo', 'Negativo', 'Positivo', 'Negativo', 'Negativo',\n",
+              "       'Positivo', 'Negativo', 'Negativo', 'Positivo', 'Positivo',\n",
+              "       'Positivo', 'Negativo', 'Negativo', 'Positivo', 'Positivo',\n",
+              "       'Negativo', 'Negativo', 'Positivo', 'Negativo', 'Negativo',\n",
+              "       'Positivo', 'Positivo', 'Negativo', 'Positivo', 'Positivo',\n",
+              "       'Negativo', 'Negativo', 'Positivo', 'Positivo', 'Negativo',\n",
+              "       'Negativo', 'Positivo', 'Positivo', 'Negativo', 'Positivo',\n",
+              "       'Negativo', 'Positivo', 'Negativo', 'Positivo', 'Positivo',\n",
+              "       'Negativo', 'Positivo', 'Positivo', 'Positivo', 'Positivo',\n",
+              "       'Positivo', 'Negativo', 'Negativo', 'Negativo', 'Negativo',\n",
+              "       'Negativo', 'Negativo', 'Positivo', 'Positivo', 'Positivo',\n",
+              "       'Positivo', 'Negativo', 'Negativo', 'Negativo', 'Negativo',\n",
+              "       'Positivo', 'Positivo', 'Positivo', 'Positivo', 'Positivo'],\n",
+              "      dtype='<U8')"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "array_etiquetas = np.where(predicciones_rf2 == 0, 'Negativo', 'Positivo')\n",
+        "array_etiquetas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Convertir los datos de ID a arreglo:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
