--- a/TallerClasificacion(bueno).ipynb
+++ b/TallerClasificacion(bueno).ipynb
@@ -253,12 +253,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Uso de datos no clasificados:"
+        "# Uso de datos no clasificados:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -282,7 +282,6 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>id</th>\n",
               "      <th>tamaño</th>\n",
               "      <th>categoria</th>\n",
               "      <th>sensor_orion</th>\n",
@@ -295,7 +294,6 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>300001</td>\n",
               "      <td>0.10</td>\n",
               "      <td>2</td>\n",
               "      <td>-91.99</td>\n",
@@ -306,7 +304,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>300002</td>\n",
               "      <td>0.93</td>\n",
               "      <td>2</td>\n",
               "      <td>2.98</td>\n",
@@ -317,7 +314,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>300003</td>\n",
               "      <td>0.86</td>\n",
               "      <td>3</td>\n",
               "      <td>-22.53</td>\n",
@@ -328,7 +324,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>300004</td>\n",
               "      <td>0.86</td>\n",
               "      <td>1</td>\n",
               "      <td>24.14</td>\n",
@@ -339,7 +334,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>300005</td>\n",
               "      <td>0.92</td>\n",
               "      <td>3</td>\n",
               "      <td>16.14</td>\n",
@@ -357,11 +351,9 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
-              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>95</th>\n",
-              "      <td>300096</td>\n",
               "      <td>0.61</td>\n",
               "      <td>3</td>\n",
               "      <td>75.72</td>\n",
@@ -372,7 +364,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>96</th>\n",
-              "      <td>300097</td>\n",
               "      <td>0.08</td>\n",
               "      <td>1</td>\n",
               "      <td>-3.33</td>\n",
@@ -383,7 +374,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>97</th>\n",
-              "      <td>300098</td>\n",
               "      <td>0.41</td>\n",
               "      <td>3</td>\n",
               "      <td>-48.04</td>\n",
@@ -394,7 +384,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
-              "      <td>300099</td>\n",
               "      <td>0.71</td>\n",
               "      <td>1</td>\n",
               "      <td>15.46</td>\n",
@@ -405,7 +394,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>99</th>\n",
-              "      <td>300100</td>\n",
               "      <td>0.40</td>\n",
               "      <td>2</td>\n",
               "      <td>36.78</td>\n",
@@ -416,22 +404,22 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>100 rows × 8 columns</p>\n",
+              "<p>100 rows × 7 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "        id  tamaño  categoria  sensor_orion  sensor_vega  sensor_polaris  \\\n",
-              "0   300001    0.10          2        -91.99        90.35           12.85   \n",
-              "1   300002    0.93          2          2.98        14.86          -22.14   \n",
-              "2   300003    0.86          3        -22.53        10.25           74.24   \n",
-              "3   300004    0.86          1         24.14       -31.35          -67.50   \n",
-              "4   300005    0.92          3         16.14        98.17          -14.76   \n",
-              "..     ...     ...        ...           ...          ...             ...   \n",
-              "95  300096    0.61          3         75.72       -65.18           75.00   \n",
-              "96  300097    0.08          1         -3.33       -28.75          -97.28   \n",
-              "97  300098    0.41          3        -48.04       -23.84           32.14   \n",
-              "98  300099    0.71          1         15.46       -39.97           45.71   \n",
-              "99  300100    0.40          2         36.78       -59.10          -65.14   \n",
+              "    tamaño  categoria  sensor_orion  sensor_vega  sensor_polaris  \\\n",
+              "0     0.10          2        -91.99        90.35           12.85   \n",
+              "1     0.93          2          2.98        14.86          -22.14   \n",
+              "2     0.86          3        -22.53        10.25           74.24   \n",
+              "3     0.86          1         24.14       -31.35          -67.50   \n",
+              "4     0.92          3         16.14        98.17          -14.76   \n",
+              "..     ...        ...           ...          ...             ...   \n",
+              "95    0.61          3         75.72       -65.18           75.00   \n",
+              "96    0.08          1         -3.33       -28.75          -97.28   \n",
+              "97    0.41          3        -48.04       -23.84           32.14   \n",
+              "98    0.71          1         15.46       -39.97           45.71   \n",
+              "99    0.40          2         36.78       -59.10          -65.14   \n",
               "\n",
               "    sensor_antares etiqueta_numerica  \n",
               "0            45.19              None  \n",
@@ -446,10 +434,10 @@
               "98           64.84              None  \n",
               "99            5.63              None  \n",
               "\n",
-              "[100 rows x 8 columns]"
+              "[100 rows x 7 columns]"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -459,7 +447,6 @@
         "\n",
         "query2 = \"\"\"\n",
         "SELECT\n",
-        "datos_basicos.id,\n",
         "datos_basicos.tamaño,\n",
         "datos_basicos.categoria,\n",
         "orion.sensor_orion,\n",
@@ -495,12 +482,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Clasificación de datos no identificados:"
+        "# Clasificación de datos no identificados:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -513,12 +500,15 @@
               "       1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1], dtype=int64)"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "import csv\n",
+        "import numpy as np\n",
+        "\n",
         "X2 = dataset2.drop('etiqueta_numerica', axis=1)\n",
         "Y2 = dataset2['etiqueta_numerica']\n",
         "\n",
@@ -526,23 +516,21 @@
         "scaler2 = StandardScaler()\n",
         "X_Test_scaled2 = scaler.transform(X2)\n",
         "\n",
-        "\n",
         "# Predicciones y evaluación del modelo\n",
         "predicciones_rf2 = modelo_rf.predict(X_Test_scaled2)\n",
-        "\n",
-        "predicciones_rf2\n"
+        "predicciones_rf2"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Conversión de números a palabras:"
+        "# Conversión de números a palabras:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -571,30 +559,167 @@
               "      dtype='<U8')"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "import numpy as np\n",
-        "array_etiquetas = np.where(predicciones_rf2 == 0, 'Negativo', 'Positivo')\n",
-        "array_etiquetas"
+        "Output = np.where(predicciones_rf2 == 0, 'Negativo', 'Positivo')\n",
+        "Output"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Convertir los datos de ID a arreglo:"
+        "# Consulta ID SQL:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>300100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>300099</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>300098</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>300097</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>300096</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95</th>\n",
+              "      <td>300005</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>300004</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>300003</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>300002</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99</th>\n",
+              "      <td>300001</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        id\n",
+              "0   300100\n",
+              "1   300099\n",
+              "2   300098\n",
+              "3   300097\n",
+              "4   300096\n",
+              "..     ...\n",
+              "95  300005\n",
+              "96  300004\n",
+              "97  300003\n",
+              "98  300002\n",
+              "99  300001\n",
+              "\n",
+              "[100 rows x 1 columns]"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ID = sqlite3.connect('datos_sensores.db');\n",
+        "\n",
+        "query2 = \"\"\"\n",
+        "SELECT id\n",
+        "FROM datos_basicos\n",
+        "ORDER BY id DESC\n",
+        "LIMIT 100;\n",
+        "\"\"\"\n",
+        "\n",
+        "dataID = pd.read_sql_query(query2,conexion2);\n",
+        "dataID"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Genera CSV:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Archivo CSV 'predicciones.csv' generado exitosamente.\n"
+          ]
+        }
+      ],
+      "source": [
+        "dataID['Clasificación'] = Output\n",
+        "ruta_archivo_csv = \"predicciones.csv\"\n",
+        "\n",
+        "# Guarda el DataFrame en un archivo CSV\n",
+        "dataID.to_csv(ruta_archivo_csv, index=False)\n",
+        "\n",
+        "print(f\"Archivo CSV '{ruta_archivo_csv}' generado exitosamente.\")"
+      ]
     }
   ],
   "metadata": {
