--- a/TallerClasificacion(bueno).ipynb
+++ b/TallerClasificacion(bueno).ipynb
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -608,23 +608,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>300100</td>\n",
+              "      <td>300001</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>300099</td>\n",
+              "      <td>300002</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>300098</td>\n",
+              "      <td>300003</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>300097</td>\n",
+              "      <td>300004</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>300096</td>\n",
+              "      <td>300005</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -632,23 +632,23 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>95</th>\n",
-              "      <td>300005</td>\n",
+              "      <td>300096</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>96</th>\n",
-              "      <td>300004</td>\n",
+              "      <td>300097</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>97</th>\n",
-              "      <td>300003</td>\n",
+              "      <td>300098</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
-              "      <td>300002</td>\n",
+              "      <td>300099</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>99</th>\n",
-              "      <td>300001</td>\n",
+              "      <td>300100</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -657,22 +657,22 @@
             ],
             "text/plain": [
               "        id\n",
-              "0   300100\n",
-              "1   300099\n",
-              "2   300098\n",
-              "3   300097\n",
-              "4   300096\n",
+              "0   300001\n",
+              "1   300002\n",
+              "2   300003\n",
+              "3   300004\n",
+              "4   300005\n",
               "..     ...\n",
-              "95  300005\n",
-              "96  300004\n",
-              "97  300003\n",
-              "98  300002\n",
-              "99  300001\n",
+              "95  300096\n",
+              "96  300097\n",
+              "97  300098\n",
+              "98  300099\n",
+              "99  300100\n",
               "\n",
               "[100 rows x 1 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -682,9 +682,13 @@
         "\n",
         "query2 = \"\"\"\n",
         "SELECT id\n",
-        "FROM datos_basicos\n",
-        "ORDER BY id DESC\n",
-        "LIMIT 100;\n",
+        "FROM (\n",
+        "    SELECT id\n",
+        "    FROM datos_basicos\n",
+        "    ORDER BY id DESC\n",
+        "    LIMIT 100\n",
+        ") AS ultimas_100\n",
+        "ORDER BY id ASC;\n",
         "\"\"\"\n",
         "\n",
         "dataID = pd.read_sql_query(query2,conexion2);\n",
@@ -700,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
