--- a/TallerClasificacion(bueno).ipynb
+++ b/TallerClasificacion(bueno).ipynb
@@ -7,9 +7,9 @@
         "# DESARROLLO TALLER 2\n",
         " Profundización Automatización y Control.\n",
         "Desarrollado por:\n",
-        "* Jhonathan\n",
-        "* Juan José Torres Quiñonez. 220160099.\n",
-        "* Jason"
+        "* Juan José Torres Quiñonez. 220160099.            \n",
+        "* Jeison Guillermo Moreno Eraso. 220160072.  \n",
+        "* Jonathan David Rosero Moreno. 220160119."
       ]
     },
     {
