--- a/AlgoritmoGenetico_futbol.ipynb
+++ b/AlgoritmoGenetico_futbol.ipynb
@@ -8,7 +8,6 @@
     " Profundización Automatización y Control.\n",
     "Desarrollado por:\n",
     "* Juan José Torres Quiñonez. 220160099.            \n",
-    "* Jeison Guillermo Moreno Eraso. 220160072.  \n",
     "* Jonathan David Rosero Moreno. 220160119.\n",
     "\n",
     "Se aborda el problema de la siguiente forma:\n",
@@ -19,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -28,19 +27,36 @@
      "text": [
       "Generación:  1\n",
       "Variantes de jugadores: \n",
+      "[[0 0 0 0]\n",
+      " [1 0 1 1]\n",
+      " [0 1 0 1]\n",
+      " [1 1 1 0]\n",
+      " [0 0 0 0]]\n",
+      "EVALUACION: \n",
+      "Resultados de la evaluación:\n",
+      "Respectivos resultados de variantes jugadores: \n",
+      "[ 0 85 65 50  0]\n",
+      "RECOMBINACION: \n",
+      "Generación:  2\n",
+      "Variantes de jugadores: \n",
       "[[0 0 1 0]\n",
-      " [0 0 1 1]\n",
-      " [1 1 1 1]\n",
-      " [0 1 1 0]\n",
-      " [0 1 1 1]]\n"
+      " [1 0 1 1]\n",
+      " [0 1 1 1]\n",
+      " [1 1 1 0]\n",
+      " [1 1 0 0]]\n",
+      "EVALUACION: \n",
+      "Resultados de la evaluación:\n",
+      "Respectivos resultados de variantes jugadores: \n",
+      "[30 85 95 50 20]\n"
      ]
     }
    ],
    "source": [
+    "#Version 3:\n",
     "import random\n",
     "import numpy as np\n",
     "\n",
-    "pesosAtributos = [10, 20, 30, 50] #Velocidad: 10, Equilibrio: 20, Fuerza: 30, Resistencia: 50.\n",
+    "pesosAtributos = [5, 15, 30, 50] #Velocidad: 5, Equilibrio: 15, Fuerza: 30, Resistencia: 50.\n",
     "generacion = 0\n",
     "\n",
     "def crear_vectores_aleatorios(n, m):\n",
@@ -57,11 +73,57 @@
     "vectores_generados = crear_vectores_aleatorios(n, m)\n",
     "\n",
     "# Imprime los vectores generados\n",
-    "print(\"Generación: \",generacion+1)\n",
+    "generacion=generacion+1\n",
+    "print(\"Generación: \",generacion)\n",
     "print(\"Variantes de jugadores: \")\n",
     "print(vectores_generados)\n",
     "\n",
-    "#EVALUACIÓN:\n"
+    "#EVALUACIÓN:\n",
+    "print(\"EVALUACION: \")\n",
+    "resultados_evaluacion = vectores_generados * np.array(pesosAtributos)\n",
+    "print(\"Resultados de la evaluación:\")\n",
+    "#print(resultados_evaluacion)\n",
+    "# Suma los valores de cada fila\n",
+    "suma_por_fila = np.sum(resultados_evaluacion, axis=1)\n",
+    "print(\"Respectivos resultados de variantes jugadores: \")\n",
+    "print(suma_por_fila)\n",
+    "\n",
+    "#RECOMBINACIÓN\n",
+    "print(\"RECOMBINACION: \")\n",
+    "for i in range(0, n-1):\n",
+    "    A=vectores_generados[0,i]\n",
+    "    B=vectores_generados[1,i]\n",
+    "    eleccion_aleatoria = random.choice([A, B])\n",
+    "    vectores_generados[0,i]=eleccion_aleatoria\n",
+    "for i in range(0, n-1):\n",
+    "    A=vectores_generados[1,i]\n",
+    "    B=vectores_generados[2,i]\n",
+    "    eleccion_aleatoria = random.choice([A, B])\n",
+    "    vectores_generados[2,i]=eleccion_aleatoria\n",
+    "for i in range(0, n-1):\n",
+    "    A=vectores_generados[2,i]\n",
+    "    B=vectores_generados[3,i]\n",
+    "    eleccion_aleatoria = random.choice([A, B])\n",
+    "    vectores_generados[3,i]=eleccion_aleatoria\n",
+    "for i in range(0, n-1):\n",
+    "    A=vectores_generados[3,i]\n",
+    "    B=vectores_generados[4,i]\n",
+    "    eleccion_aleatoria = random.choice([A, B])\n",
+    "    vectores_generados[4,i]=eleccion_aleatoria\n",
+    "generacion=generacion+1\n",
+    "print(\"Generación: \",generacion)\n",
+    "print(\"Variantes de jugadores: \")\n",
+    "print(vectores_generados)\n",
+    "\n",
+    "#EVALUACIÓN:\n",
+    "print(\"EVALUACION: \")\n",
+    "resultados_evaluacion = vectores_generados * np.array(pesosAtributos)\n",
+    "print(\"Resultados de la evaluación:\")\n",
+    "#print(resultados_evaluacion)\n",
+    "# Suma los valores de cada fila\n",
+    "suma_por_fila = np.sum(resultados_evaluacion, axis=1)\n",
+    "print(\"Respectivos resultados de variantes jugadores: \")\n",
+    "print(suma_por_fila)\n"
    ]
   },
   {
