--- a/AlgoritmoGenetico_futbol.ipynb
+++ b/AlgoritmoGenetico_futbol.ipynb
@@ -13,12 +13,13 @@
     "Se aborda el problema de la siguiente forma:\n",
     "Se requiere un algoritmo que nos arroje los mejores tipos de individuos para un juego de futbol.\n",
     "Los atributos que consideramos importantes para un jugador son:\n",
-    "Velocidad, Equilibrio, Fuerza, Resistencia."
+    "Velocidad, Equilibrio, Fuerza, Resistencia.\n",
+    "El siguiente método es como el trabajado en clase:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -27,27 +28,39 @@
      "text": [
       "Generación:  1\n",
       "Variantes de jugadores: \n",
-      "[[0 0 0 0]\n",
-      " [1 0 1 1]\n",
-      " [0 1 0 1]\n",
-      " [1 1 1 0]\n",
-      " [0 0 0 0]]\n",
+      "[[1 1 1 0]\n",
+      " [0 0 1 1]\n",
+      " [0 0 1 0]\n",
+      " [1 0 1 0]\n",
+      " [1 0 1 1]]\n",
       "EVALUACION: \n",
       "Resultados de la evaluación:\n",
       "Respectivos resultados de variantes jugadores: \n",
-      "[ 0 85 65 50  0]\n",
+      "[50 80 30 35 85]\n",
       "RECOMBINACION: \n",
       "Generación:  2\n",
       "Variantes de jugadores: \n",
-      "[[0 0 1 0]\n",
-      " [1 0 1 1]\n",
-      " [0 1 1 1]\n",
-      " [1 1 1 0]\n",
-      " [1 1 0 0]]\n",
+      "[[0 1 1 1]\n",
+      " [0 0 1 1]\n",
+      " [0 0 1 0]\n",
+      " [1 0 1 0]\n",
+      " [1 0 1 0]]\n",
       "EVALUACION: \n",
       "Resultados de la evaluación:\n",
       "Respectivos resultados de variantes jugadores: \n",
-      "[30 85 95 50 20]\n"
+      "[95 80 30 35 35]\n",
+      "RECOMBINACION: \n",
+      "Generación:  3\n",
+      "Variantes de jugadores: \n",
+      "[[0 0 1 1]\n",
+      " [0 0 1 1]\n",
+      " [0 0 1 1]\n",
+      " [0 0 1 1]\n",
+      " [1 0 1 0]]\n",
+      "EVALUACION: \n",
+      "Resultados de la evaluación:\n",
+      "Respectivos resultados de variantes jugadores: \n",
+      "[80 80 80 80 35]\n"
      ]
     }
    ],
@@ -88,42 +101,45 @@
     "print(\"Respectivos resultados de variantes jugadores: \")\n",
     "print(suma_por_fila)\n",
     "\n",
-    "#RECOMBINACIÓN\n",
-    "print(\"RECOMBINACION: \")\n",
-    "for i in range(0, n-1):\n",
-    "    A=vectores_generados[0,i]\n",
-    "    B=vectores_generados[1,i]\n",
-    "    eleccion_aleatoria = random.choice([A, B])\n",
-    "    vectores_generados[0,i]=eleccion_aleatoria\n",
-    "for i in range(0, n-1):\n",
-    "    A=vectores_generados[1,i]\n",
-    "    B=vectores_generados[2,i]\n",
-    "    eleccion_aleatoria = random.choice([A, B])\n",
-    "    vectores_generados[2,i]=eleccion_aleatoria\n",
-    "for i in range(0, n-1):\n",
-    "    A=vectores_generados[2,i]\n",
-    "    B=vectores_generados[3,i]\n",
-    "    eleccion_aleatoria = random.choice([A, B])\n",
-    "    vectores_generados[3,i]=eleccion_aleatoria\n",
-    "for i in range(0, n-1):\n",
-    "    A=vectores_generados[3,i]\n",
-    "    B=vectores_generados[4,i]\n",
-    "    eleccion_aleatoria = random.choice([A, B])\n",
-    "    vectores_generados[4,i]=eleccion_aleatoria\n",
-    "generacion=generacion+1\n",
-    "print(\"Generación: \",generacion)\n",
-    "print(\"Variantes de jugadores: \")\n",
-    "print(vectores_generados)\n",
+    "#ITERACIONES DEL PROCESO:\n",
+    "hasta=3\n",
+    "for nVeces in range(1,hasta):\n",
+    "    #RECOMBINACIÓN\n",
+    "    print(\"RECOMBINACION: \")\n",
+    "    for i in range(0, n-1):\n",
+    "        A=vectores_generados[0,i]\n",
+    "        B=vectores_generados[1,i]\n",
+    "        eleccion_aleatoria = random.choice([A, B])\n",
+    "        vectores_generados[0,i]=eleccion_aleatoria\n",
+    "    for i in range(0, n-1):\n",
+    "        A=vectores_generados[1,i]\n",
+    "        B=vectores_generados[2,i]\n",
+    "        eleccion_aleatoria = random.choice([A, B])\n",
+    "        vectores_generados[2,i]=eleccion_aleatoria\n",
+    "    for i in range(0, n-1):\n",
+    "        A=vectores_generados[2,i]\n",
+    "        B=vectores_generados[3,i]\n",
+    "        eleccion_aleatoria = random.choice([A, B])\n",
+    "        vectores_generados[3,i]=eleccion_aleatoria\n",
+    "    for i in range(0, n-1):\n",
+    "        A=vectores_generados[3,i]\n",
+    "        B=vectores_generados[4,i]\n",
+    "        eleccion_aleatoria = random.choice([A, B])\n",
+    "        vectores_generados[4,i]=eleccion_aleatoria\n",
+    "    generacion=generacion+1\n",
+    "    print(\"Generación: \",generacion)\n",
+    "    print(\"Variantes de jugadores: \")\n",
+    "    print(vectores_generados)\n",
     "\n",
-    "#EVALUACIÓN:\n",
-    "print(\"EVALUACION: \")\n",
-    "resultados_evaluacion = vectores_generados * np.array(pesosAtributos)\n",
-    "print(\"Resultados de la evaluación:\")\n",
-    "#print(resultados_evaluacion)\n",
-    "# Suma los valores de cada fila\n",
-    "suma_por_fila = np.sum(resultados_evaluacion, axis=1)\n",
-    "print(\"Respectivos resultados de variantes jugadores: \")\n",
-    "print(suma_por_fila)\n"
+    "    #EVALUACIÓN:\n",
+    "    print(\"EVALUACION: \")\n",
+    "    resultados_evaluacion = vectores_generados * np.array(pesosAtributos)\n",
+    "    print(\"Resultados de la evaluación:\")\n",
+    "    #print(resultados_evaluacion)\n",
+    "    # Suma los valores de cada fila\n",
+    "    suma_por_fila = np.sum(resultados_evaluacion, axis=1)\n",
+    "    print(\"Respectivos resultados de variantes jugadores: \")\n",
+    "    print(suma_por_fila)\n"
    ]
   },
   {
